--- a/src/templates/app/base.html
+++ b/src/templates/app/base.html
@@ -18,20 +18,23 @@
 <div id="layoutSidenav">
     {% include 'app/navbar.html' %}
     <div id="layoutSidenav_content">
-    <main>
-        <div class="container-fluid px-4">
-        {% block content %} {% endblock %}
-        {% include 'app/footer.html' %}
+        <main>
+            <div class="container-fluid px-4">
+                {% for message in messages %}
+                    <h1 class="text-success">{{ message }}</h1>
+                {% endfor %}
+                {% block content %} {% endblock %}
+                {% include 'app/footer.html' %}
+            </div>
     </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-<script src="{% static 'admin/js/scripts.js' %}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-<script src="{% static 'admin/assets/demo/chart-area-demo.js' %}"></script>
-<script src="{% static 'admin/assets/demo/chart-bar-demo.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
-<script src="{% static 'admin/js/datatables-simple-demo.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+            crossorigin="anonymous"></script>
+    <script src="{% static 'admin/js/scripts.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+    <script src="{% static 'admin/assets/demo/chart-area-demo.js' %}"></script>
+    <script src="{% static 'admin/assets/demo/chart-bar-demo.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
+    <script src="{% static 'admin/js/datatables-simple-demo.js' %}"></script>
 </body>
 </html>
