--- a/src/user/templates/login.html
+++ b/src/user/templates/login.html
@@ -22,6 +22,9 @@
                         <div class="card shadow-lg border-0 rounded-lg mt-5">
                             <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                             <div class="card-body">
+                                {% for message in messages %}
+                                    <h1 class="text-danger">{{ message }}</h1>
+                                {% endfor %}
                                 <form method="post" action="">
                                     {% csrf_token %}
                                     <div class="form-floating mb-3">
